// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`semantic classes > handles deprecated button|input|f 2`] = `
[
  "[REMOVED] button -> use Warp button component instead",
  "[REMOVED] button--default -> use Warp button component instead",
  "[REMOVED] button--secondary -> use Warp button component instead",
  "[REMOVED] input-toggle -> use Warp input component instead",
  "[REMOVED] input -> use Warp input component instead",
  "[REMOVED] input--is-invalid -> use Warp input component instead",
  "[REMOVED] f-modal-title-leave-to -> use Warp modal component instead",
  "[REMOVED] f-slider -> use Warp slider component instead",
  "[REMOVED] f-card-outline -> use Warp card component instead",
]
`;

exports[`semantic classes > handles deprecated button|input|f with pseudo 2`] = `
[
  "[REMOVED] button -> use Warp button component instead",
  "[REMOVED] button--default -> use Warp button component instead",
  "[REMOVED] button--secondary -> use Warp button component instead",
  "[REMOVED] input-toggle -> use Warp input component instead",
  "[REMOVED] input -> use Warp input component instead",
  "[REMOVED] input--is-invalid -> use Warp input component instead",
  "[REMOVED] f-modal-title-leave-to -> use Warp modal component instead",
  "[REMOVED] f-slider -> use Warp slider component instead",
  "[REMOVED] f-card-outline -> use Warp card component instead",
]
`;

exports[`semantic classes > handles deprecated link with a custom message with and without pseudo 2`] = `
[
  "[REMOVED] link -> use Warp button component instead",
  "[REMOVED] link -> use Warp button component instead",
]
`;

exports[`semantic classes > handles deprecated segment-control|field 2`] = `
[
  "[REMOVED] field -> use Warp form components instead",
  "[REMOVED] field-hint -> use Warp form components instead",
  "[REMOVED] segment-control__item -> use Warp button-group component instead",
  "[REMOVED] segment-control--is-disabled -> use Warp button-group component instead",
  "[REMOVED] segment-control -> use Warp button-group component instead",
]
`;

exports[`semantic classes > handles deprecated segment-control|field with pseudo 2`] = `
[
  "[REMOVED] field -> use Warp form components instead",
  "[REMOVED] segment-control__item -> use Warp button-group component instead",
]
`;
